force-app/main/default/objects/Opportunity/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Commissionable entity with PCES ID</inlineHelpText>
    <label>Broker</label>
<!--
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
-->    
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
<!--
-->
    <type>Lookup</type>
</CustomField>