force-app/main/default/objects/Opportunity/fields/OVRID_PRIM_FIELD_OFC_ID__c.field-meta.xml
<CustomField>
    <fullName>OVRID_PRIM_FIELD_OFC_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If changing this field, populate with office associated with opportunity</inlineHelpText>
    <label>Override Primary Field Office</label>
    <referenceTo>FIELD_OFC__c</referenceTo>
    <relationshipLabel>Opportunities (Override Primary Field Office)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>