force-app/main/default/objects/Opportunity/fields/PRIM_FIELD_OFC_NM__c.field-meta.xml
<CustomField>
    <fullName>PRIM_FIELD_OFC_NM__c</fullName>
    <formula>IF(ISBLANK(OVRID_PRIM_FIELD_OFC_ID__c) = TRUE , Owner.Sales_Office__c , OVRID_PRIM_FIELD_OFC_ID__r.Name)</formula>
    <inlineHelpText>Automatically populated based on field  user's mailstop, does not populate for Home Office users.</inlineHelpText>
    <label>Primary Field Office</label>
    <type>Text</type>
</CustomField>