force-app/main/default/objects/Opportunity/fields/PRIM_SALE_REP_ID__c.field-meta.xml
<CustomField>
    <fullName>PRIM_SALE_REP_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales Rep in Field Office assigned to opportunity team</inlineHelpText>
    <label>Primary Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>