force-app/main/default/objects/Opportunity/fields/QUOTE_STAGE_BEGIN_DT__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_STAGE_BEGIN_DT__c</fullName>
    <description>This field captures the date/time-stamp when the Opportunity reaches the "Quoting" stage for the first time.</description>
    <label>Quote Stage Begin Date</label>
    <type>DateTime</type>
</CustomField>